[#632] feat(licensing): add LicenseManager, LicenseStatusResource, and node enforcement (#633)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>